# GPT-SoVITS

./: .gitignore  111  Colab-WebUI.ipynb  README.md  api.py  api_v2.py  cfg.py  config.py  debug.py  gen_audio.py  gen_audio_benchmark.py  go-webui.bat  go-webui.ps1  gpt-sovits_kaggle.ipynb  install.sh  my_utils.py  pyproject.toml  requirements.txt  run.sh  schema.py  setup.sh  test.py  webui.py
.github/workflows/: format.yml
Docker/: download.py
GPT_SoVITS/: download.py  export_torch_script.py  export_torch_script_v3v4.py  inference_cli.py  inference_gui.py  inference_webui.py  inference_webui_fast.py  onnx_export.py  process_ckpt.py  s1_train.py  s2_train.py  s2_train_v3.py  s2_train_v3_lora.py  sv.py  utils.py
GPT_SoVITS/Accelerate/: __init__.py  logger.py
GPT_SoVITS/AsyncTTS/: AsyncTTSEngine.py  utils.py
GPT_SoVITS/BigVGAN/: bigvgan.py  discriminators.py  inference.py  inference_e2e.py  loss.py  meldataset.py  train.py  utils.py  utils0.py
GPT_SoVITS/TTS_infer_pack/: AsyncTTSEngine.py  TTS.py  TTS_Config.py  TTS_Wrapper.py  TextPreprocessor.py  __init__.py  text_segmentation_method.py
GPT_SoVITS/configs/: .gitignore
GPT_SoVITS/eres2net/: ERes2Net_huge.py  kaldi.py
GPT_SoVITS/feature_extractor/: cnhubert.py
GPT_SoVITS/module/: AsyncSoVITS.py  attentions.py  attentions_onnx.py  commons.py  core_vq.py  data_utils.py  dit.py  dit_modules.py  losses.py  mel_processing.py  models.py  models_onnx.py  modules.py  mrte_model.py  quantize.py  synthesizer.py  transforms.py
tools/: api.py  audio_sr.py  cfg.py  cli.py  cmd-denoise.py  inference_webui.py  my_utils.py  slice_audio.py  slicer2.py  subfix_webui.py  train_webui.py
(+157 files in other folders)
