[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["GPT_SoVITS","tools"]

[project]
name = "GPT-SoVITS"
version = "0.1.0"
description = "A Powerful Few-shot Text-to-Speech"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10.0, <3.13.0"
authors = [
  { name = "RVC-Boss" }
]
dependencies = [
    "numpy==1.26.4",
    "scipy",
    "tensorboard",
    "librosa==0.9.2",
    "numba==0.60.0",
    "pytorch-lightning",
    "matplotlib>=3.7",
    "torchmetrics <= 1.5.0",
    "uvicorn[standard]",
    "gradio==5.12",
    "ffmpeg-python",
    "onnxruntime; sys_platform == 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "tqdm",
    "funasr==1.0.27",
    "cn2an",
    "pypinyin",
    "pyopenjtalk>=0.3.4",
    "g2p_en",
    "torchaudio",
    "modelscope==1.10.0",
    "sentencepiece",
    "transformers",
    "PyYAML",
    "psutil",
    "jieba_fast",
    "jieba",
    "LangSegment>=0.2.0",
    "Faster_Whisper",
    "wordsegment",
    "rotary_embedding_torch",
    "ToJyutping",
    "g2pk2",
    "ko_pron",
    "opencc; sys_platform != 'linux'",
    "opencc==1.1.1; sys_platform == 'linux'",
    "python_mecab_ko; sys_platform != 'win32'",
    "x_transformers",
]

[project.optional-dependencies]
standard = [
    "torch>2.0,<=2.5.1",
]

[project.urls]
repository = "https://github.com/RVC-Boss/GPT-SoVITS"
wiki =  "https://github.com/RVC-Boss/GPT-SoVITS/wiki"

[tool.isort]
line_length = 150
profile = "black"

[project.scripts]
GPT-SoVITS = "tools.cli:cli"